add Flights Info
